--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,12 @@
 
 
+Version 1.3.0 - 2021-05-13
+
+    Changes:
+
+    *   No longer vendoring qtpy, but made it a dependency.
+
+
 Version 1.2.1 - 2016-11-02
 
     Changes:
