--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,12 @@
 
+Version 1.3.1 - 2022-12-18
+
+    Changes:
+
+    *   Fix for Python 3.10
+    *   Renamed __special__ methods to __dunder__ methods.
+
+
 
 Version 1.3.0 - 2021-05-13
 
